src/test/ui/mut/mutable-class-fields.ast.stderr
error[E0594]: cannot assign to field `nyan.how_hungry` of immutable binding
  --> $DIR/mutable-class-fields.rs:18:3
   |
LL |   let nyan : Cat = cat(52, 99);
   |       ---- help: make this binding mutable: `mut nyan`
LL |   nyan.how_hungry = 0;
   |   ^^^^^^^^^^^^^^^^^^^ cannot mutably borrow field of immutable binding

error: aborting due to previous error

